# skyreader

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements-examples.txt  requirements-plots.txt  requirements-tests.txt  requirements.txt  setup.cfg  setup.cfg~
.github/workflows/: test.yml  wipac-cicd.yml
examples/: plot_scan_result_file.py  plot_skydriver_scan_result.py
skyreader/: __init__.py  config.py  result.py
skyreader/plot/: __init__.py  areas.py  contours.py  plot.py  plotting_tools.py
skyreader/scripts/: __init__.py  plot_skydriver_scan_result.py
skyreader/utils/: extract_map.py  handle_map_data.py
tests/unit/: test_imports.py  test_is_close.py
