[project]
version = "1.3.3"
dependencies = [
    "astropy",
    "healpy",
    "matplotlib",
    "meander",
    "mhealpy",
    "numpy",
    "pandas",
    "scipy",
    "wipac-dev-tools"
]

[project.optional-dependencies]
tests = [
    "pytest",
    "pytest-mock"
]
examples = [
    "wipac-rest-tools"
]
mypy = [
    "pytest",
    "pytest-mock",
    "wipac-rest-tools"
]
